--- a/src/main/webapp/resources/register.css
+++ b/src/main/webapp/resources/register.css
@@ -53,6 +53,7 @@ button {
     font-size: 12px;
     font-weight: bold;
     padding: 12px 45px;
+    margin-top: 10px;
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
@@ -82,12 +83,16 @@ form {
     text-align: center;
 }
 
-input {
+input, select {
     background-color: #eee;
     border: none;
     padding: 12px 15px;
     margin: 8px 0;
     width: 100%;
+}
+
+select:invalid {
+    color: #7e7e7e;
 }
 
 .container {
@@ -99,7 +104,7 @@ input {
     overflow: hidden;
     width: 768px;
     max-width: 100%;
-    min-height: 480px;
+    min-height: 500px;
 }
 
 .form-container {
@@ -111,38 +116,12 @@ input {
 
 .registration-container {
     left: 0;
-    width: 50%;
+    width: 100%;
     z-index: 2;
 }
 
 .container.right-panel-active .registration-container {
     transform: translateX(100%);
-}
-
-.sign-up-container {
-    left: 0;
-    width: 50%;
-    opacity: 0;
-    z-index: 1;
-}
-
-.container.right-panel-active .sign-up-container {
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-    animation: show 0.6s;
-}
-
-@keyframes show {
-    0%, 49.99% {
-        opacity: 0;
-        z-index: 1;
-    }
-
-    50%, 100% {
-        opacity: 1;
-        z-index: 5;
-    }
 }
 
 .overlay-container {
@@ -160,39 +139,8 @@ input {
     transform: translateX(-100%);
 }
 
-.overlay {
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 0 0;
-    color: #FFFFFF;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-}
-
 .container.right-panel-active .overlay {
     transform: translateX(50%);
-}
-
-.overlay-panel {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    top: 0;
-    height: 100%;
-    width: 50%;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
 }
 
 .overlay-left {
